expected/main/core/structs/structs2a.err
ERROR: "actual/main/core/structs/structs2a.lc", line 2
struct S1/16
^
Sum of component widths is 16 more than expected total

ERROR: Aborting after previously reported error

